--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1> Oh you're back ! </h1>
+<h1> Oh you're back again ! </h1>
 <p> This is another tutorial, but to understand how Github works</p>
 <h2> So I write things \o/ </h2>
 <p> You might have noticed that my front skills are being processed :D </p> 
