--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1> Oh you're back again ! </h1>
 <p> This is another tutorial, but to understand how Github works</p>
-<h2> So I write things \o/ </h2>
+<h2> So I write different things \o/ </h2>
 <p> You might have noticed that my front skills are being processed :D </p> 
 </body> 
 </html>
